--- a/index.html
+++ b/index.html
@@ -12,7 +12,24 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+
+      </section>
+   
+      <section class="card" id="css-section">
+   
+      </section>
+   
+      <section class="card" id="git-section">
+   
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <ul>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
